--- a/MuzyNew/View/AudioViewer.storyboard
+++ b/MuzyNew/View/AudioViewer.storyboard
@@ -38,6 +38,7 @@
                                         <rect key="frame" x="162" y="59" width="67" height="67"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <state key="normal">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <imageReference key="image" image="play.fill" catalog="system" symbolScale="large" renderingMode="original"/>
