--- a/MuzyNew/View/Base.lproj/Main.storyboard
+++ b/MuzyNew/View/Base.lproj/Main.storyboard
@@ -26,6 +26,14 @@
                                     <segue destination="9gy-T5-cEQ" kind="show" id="MGk-ec-Vp8"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="clX-1P-f0q">
+                                <rect key="frame" x="185" y="461" width="45" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Page 1"/>
+                                <connections>
+                                    <segue destination="kxg-AW-XmQ" kind="show" id="pXx-dN-FiS"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -35,6 +43,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1839.1304347826087" y="87.723214285714278"/>
+        </scene>
+        <!--RecordingListScreenViewController-->
+        <scene sceneID="4fg-4Z-igZ">
+            <objects>
+                <viewControllerPlaceholder storyboardName="RecordingListScreen" referencedIdentifier="RecordingListScreenViewController" id="kxg-AW-XmQ" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="yoM-Vy-ckY"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zfe-Xh-rSP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2538" y="-129"/>
         </scene>
         <!--AudioViewerViewController-->
         <scene sceneID="ybv-Z4-MD8">
