--- a/MuzyNew/View/AudioViewer.storyboard
+++ b/MuzyNew/View/AudioViewer.storyboard
@@ -83,8 +83,8 @@
                                     <constraint firstAttribute="trailing" secondItem="TF0-qG-brs" secondAttribute="trailing" constant="19" id="nf2-TE-id4"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="scoreNotesBlack" translatesAutoresizingMaskIntoConstraints="NO" id="ege-E1-jTN">
-                                <rect key="frame" x="10" y="324" width="370" height="197"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ua4-Nn-zOF">
+                                <rect key="frame" x="16" y="328" width="358" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -110,6 +110,7 @@
                         <outlet property="endTimeLabel" destination="u0P-q0-LqJ" id="0hE-FD-OB4"/>
                         <outlet property="navbarTitle" destination="gSV-Eq-7aL" id="wAq-3e-HTd"/>
                         <outlet property="playButton" destination="Vym-mW-vs0" id="8PZ-IH-Msw"/>
+                        <outlet property="scoreNotesView" destination="ua4-Nn-zOF" id="V08-D8-e6e"/>
                         <outlet property="segmentedControl" destination="fnC-WC-irK" id="VB3-wW-Qbm"/>
                         <outlet property="sliderBar" destination="TF0-qG-brs" id="IKB-AK-Z94"/>
                         <outlet property="startTimeLabel" destination="d5x-3F-cxQ" id="G3m-eK-Gtt"/>
@@ -142,7 +143,6 @@
     <resources>
         <image name="chevron.left" catalog="system" width="96" height="128"/>
         <image name="play.fill" catalog="system" width="116" height="128"/>
-        <image name="scoreNotesBlack" width="665" height="87"/>
         <namedColor name="CardColor">
             <color red="0.92500001192092896" green="0.9179999828338623" blue="0.875" alpha="0.89999997615814209" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
