--- a/MuzyNew/Cell/defaultRecordingListScreen.xib
+++ b/MuzyNew/Cell/defaultRecordingListScreen.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -9,32 +9,48 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom1" id="KGk-i7-Jjw" customClass="DefaultRecordingCell" customModule="MuzyNew" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom1" rowHeight="89" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="DefaultRecordingCell" customModule="MuzyNew" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="323" height="80"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="323" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qEb-wf-Oos">
-                        <rect key="frame" x="258" y="7" width="46" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <state key="normal" title="Button"/>
-                        <connections>
-                            <action selector="previewBtn:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="YG9-ud-OVQ"/>
-                        </connections>
-                    </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MJf-hf-MtC">
-                        <rect key="frame" x="16" y="12" width="206" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIu-Pg-5yA">
+                        <rect key="frame" x="38" y="20" width="36.333333333333343" height="20.333333333333329"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qEb-wf-Oos">
+                        <rect key="frame" x="252" y="15" width="41" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="DE8-zn-Fg9"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="41" id="DG1-Ax-dcB"/>
+                            <constraint firstAttribute="width" constant="41" id="RFz-7o-Nch"/>
+                        </constraints>
+                        <state key="normal" title="Button" image="LightMode copy"/>
+                        <connections>
+                            <action selector="previewBtn:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="YG9-ud-OVQ"/>
+                        </connections>
+                    </button>
                 </subviews>
+                <color key="backgroundColor" red="0.92519408459999997" green="0.92229080200000002" blue="0.88234788180000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="qEb-wf-Oos" secondAttribute="bottom" constant="80" id="CAH-lk-O2h"/>
+                    <constraint firstItem="qEb-wf-Oos" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="EvH-Ga-q3L"/>
+                    <constraint firstItem="GIu-Pg-5yA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="38" id="OGf-II-i6k"/>
+                    <constraint firstItem="qEb-wf-Oos" firstAttribute="leading" secondItem="GIu-Pg-5yA" secondAttribute="trailing" constant="177.66999999999999" id="OIz-5c-dZJ"/>
+                    <constraint firstAttribute="bottom" secondItem="GIu-Pg-5yA" secondAttribute="bottom" constant="20" id="OTr-He-UHh"/>
+                    <constraint firstAttribute="bottom" secondItem="qEb-wf-Oos" secondAttribute="bottom" constant="10" id="YfP-MI-Bdb"/>
+                    <constraint firstAttribute="trailing" secondItem="qEb-wf-Oos" secondAttribute="trailing" constant="30" id="k8i-oS-eQZ"/>
+                    <constraint firstItem="GIu-Pg-5yA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="tzz-W4-eaG"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
+            <point key="canvasLocation" x="123.84615384615384" y="181.27962085308056"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="LightMode copy" width="160" height="161"/>
+    </resources>
 </document>
