--- a/MuzyNew/Cell/ifTappedButton.xib
+++ b/MuzyNew/Cell/ifTappedButton.xib
@@ -9,47 +9,57 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom2" rowHeight="81" id="KGk-i7-Jjw" customClass="IfTappedCell" customModule="MuzyNew" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom2" rowHeight="94" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="IfTappedCell" customModule="MuzyNew" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="94"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="94"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hzj-SR-p0V">
-                        <rect key="frame" x="16" y="14" width="223" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hzj-SR-p0V">
+                        <rect key="frame" x="16" y="14" width="41.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2m-Na-euj">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2m-Na-euj">
                         <rect key="frame" x="16" y="50" width="31" height="15"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahW-4V-BhI">
-                        <rect key="frame" x="208" y="50" width="31" height="15"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahW-4V-BhI">
+                        <rect key="frame" x="334" y="50" width="31" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="wQS-Ft-2Nh">
-                        <rect key="frame" x="53" y="43" width="149" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </slider>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gd2-qO-4di">
-                        <rect key="frame" x="258" y="25" width="46" height="30"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gd2-qO-4di">
+                        <rect key="frame" x="248" y="32" width="46" height="30"/>
                         <state key="normal" title="Button"/>
                         <connections>
                             <action selector="pauseRecording:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="IGQ-Hc-bZq"/>
                         </connections>
                     </button>
+                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="wQS-Ft-2Nh">
+                        <rect key="frame" x="53" y="43" width="131" height="34"/>
+                    </slider>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="Hzj-SR-p0V" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="1GB-D0-HOz"/>
+                    <constraint firstAttribute="bottom" secondItem="P2m-Na-euj" secondAttribute="bottom" constant="29" id="3yo-Zj-xwa"/>
+                    <constraint firstItem="P2m-Na-euj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4PJ-e6-CPS"/>
+                    <constraint firstItem="gd2-qO-4di" firstAttribute="leading" secondItem="wQS-Ft-2Nh" secondAttribute="trailing" constant="66" id="6bp-Ay-N4M"/>
+                    <constraint firstItem="ahW-4V-BhI" firstAttribute="leading" secondItem="gd2-qO-4di" secondAttribute="trailing" constant="40" id="CLt-UH-Kxf"/>
+                    <constraint firstAttribute="bottom" secondItem="gd2-qO-4di" secondAttribute="bottom" constant="32" id="EQ3-ac-HAy"/>
+                    <constraint firstItem="Hzj-SR-p0V" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Ehn-Ki-9gI"/>
+                    <constraint firstItem="P2m-Na-euj" firstAttribute="top" secondItem="Hzj-SR-p0V" secondAttribute="bottom" constant="15" id="KvE-6i-rea"/>
+                    <constraint firstItem="wQS-Ft-2Nh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="43" id="Vfa-dV-hbI"/>
+                    <constraint firstItem="wQS-Ft-2Nh" firstAttribute="leading" secondItem="P2m-Na-euj" secondAttribute="trailing" constant="8" id="d4b-y6-IUf"/>
+                    <constraint firstItem="gd2-qO-4di" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="32" id="qTX-i0-iYu"/>
+                    <constraint firstAttribute="bottom" secondItem="wQS-Ft-2Nh" secondAttribute="bottom" constant="18" id="saT-xq-tuj"/>
+                    <constraint firstAttribute="bottom" secondItem="ahW-4V-BhI" secondAttribute="bottom" constant="29" id="wGP-Ja-fd1"/>
+                    <constraint firstItem="gd2-qO-4di" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="trailing" constant="-72" id="xnd-Eh-U86"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
@@ -58,7 +68,7 @@
                 <outlet property="pauseBtn" destination="gd2-qO-4di" id="Msd-Ab-4iD"/>
                 <outlet property="startTimeLbl" destination="P2m-Na-euj" id="NvA-Iv-rqb"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="122.20982142857142"/>
+            <point key="canvasLocation" x="131.8840579710145" y="117.85714285714285"/>
         </tableViewCell>
     </objects>
 </document>
