--- a/MuzyNew/Cell/defaultRecordingListScreen.xib
+++ b/MuzyNew/Cell/defaultRecordingListScreen.xib
@@ -12,7 +12,7 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="custom1" rowHeight="65" translatesAutoresizingMaskIntoConstraints="NO" id="KGk-i7-Jjw" customClass="DefaultRecordingCell" customModule="MuzyNew" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="388" height="56"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM" customClass="defaultRecordingListScreen">
                 <rect key="frame" x="0.0" y="0.0" width="388" height="56"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -53,6 +53,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="sampleLabel" destination="GIu-Pg-5yA" id="ZD5-D2-dCv"/>
+            </connections>
             <point key="canvasLocation" x="173.84615384615384" y="189.81042654028434"/>
         </tableViewCell>
     </objects>
